[GEOT-7696] Apply Palantir Java format on GeoTools